# smoother.py

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement-request.md
python/: bayes_smoothing.cpp  bayes_smoothing_utils.cpp
smoother/: __init__.py  bayes.py
src/: smooth.cpp
